src/client/css/style.css
/* ... */
#masthead
{
    position: relative;

    display: block;
    zoom: 1;

    margin: 0 auto;
    padding: 0 20px;

    background: #414C59 none repeat scroll 0 0;
}
/*CSS for all end*/
/*Nav*/
ul
{
    margin: 0;
    padding: 0;

    border: 0;
}
#masthead nav
{
    font: 13px 'Open Sans', sans-serif;

    float: right;

    margin: 0 16px 0 0;

    text-transform: uppercase;
}
#masthead nav li
{
    display: inline-block;

    margin: 0;

    list-style-type: none;

    *display: inline;
    *zoom: 1;
}
#masthead nav li a
{
    font-weight: normal;

    display: inline-block;

    padding: 12px;
}
#masthead nav li a,
#masthead nav li a:link,
#masthead nav li a:visited
{
    color: #eee;
    text-decoration: none;
    font-weight: 600;
}
#nav-main .toggle
{
    display: none;
    /* Hidden in non-mobile views */
}
/* Mobile Layout: 320px */
@media only screen and (max-width: 760px)
{
    #masthead,
    .container
    {
        width: auto;
        padding: 0 10px 0 10px;
    }
    #masthead nav
    {
        float: none;

        margin: 0 0 0 10px;
        padding: 10px 0 0 0;
    }
    #masthead nav ul li
    {
        display: block;
    }
    #nav-main .toggle
    {
        display: block;
        overflow: hidden;

        width: 32px;
        height: 32px;
        margin: -3px 0 0 -3px;

        cursor: pointer;
        text-indent: -999em;

        background: no-repeat center top url(../img/sandstone/icn-menu.png);
    }
    #nav-main .toggle.open
    {
        background-position: center -100px;
    }
    #nav-main #nav-main-menu li
    {
        display: block;
        float: none;

        margin: 0 10px;

        border-bottom: 1px solid #f2f2f2;
    }
    #nav-main #nav-main-menu li:last-child
    {
        border: 0;
    }
    #nav-main #nav-main-menu a
    {
        display: block;

        margin: 0 -10px;
        padding: 12px 35px 12px 10px;

        cursor: pointer;
        text-transform: none;
    }
    #nav-main #nav-main-menu a.submenu-item
    {
        background: 94% 50% no-repeat url(../img/sandstone/arrow-go.png);
    }
    #nav-main #nav-main-menu a:hover,
    #nav-main #nav-main-menu a:focus,
    #nav-main #nav-main-menu a:active
    {
        text-decoration: none;

        color: #fff;
        background-color: #247ac1;
        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #43a6e2), color-stop(100%, #247ac1));
        background-image: -webkit-linear-gradient(#43a6e2, #247ac1);
        background-image:         linear-gradient(#43a6e2, #247ac1);
        background-repeat: no-repeat;
        background-position: 94% 50%;
        text-shadow: 1px 1px 0 rgba(0, 0, 0, .25);
    }
    #nav-main #nav-main-menu a.submenu-item:hover,
    #nav-main #nav-main-menu a.submenu-item:focus,
    #nav-main #nav-main-menu a.submenu-item:active
    {
        background-image: url(../img/sandstone/arrow-go.png), -webkit-gradient(linear, left top, left bottom, color-stop(0%, #43a6e2), color-stop(100%, #247ac1));
        background-image: url(../img/sandstone/arrow-go.png), -webkit-linear-gradient(#43a6e2, #247ac1);
        background-image: url(../img/sandstone/arrow-go.png), linear-gradient(#43a6e2, #247ac1);
    }
    #nav-main #nav-main-menu li.first > a
    {
        border-radius: 10px 10px 0 0;
    }
    #nav-main #nav-main-menu li.last > a
    {
        border-radius: 0 0 10px 10px;
    }
    #nav-main-menu
    {
        position: absolute;
        z-index: 99;
        top: 35px;

        display: none;
        overflow: visible;

        width: 200px;
        margin: 15px 0 0 -10px;

        border-radius: 10px;
        background: #fff;
        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .5);
    }
    #nav-main-menu:before
    {
        position: absolute;
        top: -10px;
        left: 12px;

        display: block;

        width: 28px;
        height: 10px;

        content: '';

        background: no-repeat url(../img/sandstone/menu-point.png);
    }
}
/* Wide Mobile Layout: 480px */
@media only screen and (min-width: 480px) and (max-width: 760px)
{
    #masthead,
    .container
    {
        width: auto;
    }
}
/*Nav End*/
/*Hero Image Section */
#hero_col
{
    position: relative;
}
#hero_main
{
    position: relative;
    top: 0;
    left: 0;

    max-width: 100%;
}
#hero_logo
{
    position: absolute;
    bottom: 5px;
}
.animated
{
    -webkit-animation-duration: 2s;
            animation-duration: 2s;

    -webkit-animation-fill-mode: both;
            animation-fill-mode: both;
}

@-webkit-keyframes fadeInDown
{
    0%
    {
        -webkit-transform: translate3d(0, -100%, 0);
                transform: translate3d(0, -100%, 0);

        opacity: 0;
    }

    100%
    {
        -webkit-transform: none;
                transform: none;

        opacity: 1;

        -o-webkit-transform: none;
    }
}

@keyframes fadeInDown
{
    0%
    {
        -webkit-transform: translate3d(0, -100%, 0);
                transform: translate3d(0, -100%, 0);

        opacity: 0;
    }

    100%
    {
        -webkit-transform: none;
                transform: none;

        opacity: 1;
    }
}

.fadeInDown
{
    -webkit-animation-name: fadeInDown;
            animation-name: fadeInDown;
}

/* Hero Image ends*/
/*Download Section*/
#download-section
{
    background-color: #414C59;
}
#ff-download-message-h
{
    color: white;
}
#ff-download-btn,
#ff-download-btn:hover,
#ff-download-btn:visited,
#ff-download-btn:active
{
    text-decoration: none;

    color: white;
}
#ff-download-btn,
#ff-download-btn:hover,
#ff-download-btn:visited,
#ff-download-btn:active
{
    text-decoration: none;

    color: white;
}
#ff-download-img
{
    margin: auto;
}
#ff-download-btn
{
    float: none;
}
/* ... */

